@@ -21,7 +21,7 @@ ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 ==============================================================================
 
-The stylesheet generated by Xndiff is based very closely upon the stylesheet
+The stylesheet generated by Yandiff is based very closely upon the stylesheet
 provided with Nmap.  The three clause BSD license for that file is:
 
     Copyright (c) 2004-2006 Benjamin Erb
