@@ -1,4 +1,4 @@
-bin/xndiff
+bin/yandiff
 Build.PL
 CHANGES.txt
 COPYING.txt
