@@ -36,4 +36,4 @@
 #   Mac OSX SMB mount metadata files
 \B\._
 # Avoid archives of this distribution
-\bxndiff-[\d\.\_]+
+\byandiff-[\d\.\_]+
